fix(styles): text alignment with checkbox

--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@
 }
 
 .ott .date-line {
-    align-items: center;
+    align-items: top;
     border-radius: var(--radius-s);
     color: var(--text-normal);
     display: flex;
@@ -77,7 +77,7 @@
 
 .ott .timeline input[type="checkbox"] {
     cursor: pointer;
-    vertical-align: middle;
+    vertical-align: text-top;
 }
 
 .ott .lines {
@@ -87,13 +87,13 @@
 }
 
 .ott .line {
-    align-items: center;
+    align-items: top;
     display: flex;
     flex-wrap: wrap;
 }
 
 .ott .icon {
-    align-items: center;
+    align-items: top;
     display: flex;
     flex: 0 0 auto;
     justify-content: center;
@@ -111,7 +111,7 @@
 }
 
 .ott .task {
-    align-items: baseline;
+    align-items: top;
     border-radius: var(--radius-m);
     display: flex;
     margin: 0;
@@ -119,7 +119,7 @@
 }
 
 .ott .task .lines {
-    align-items: center;
+    align-items: top;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
